Fixed the flex width on channels being too wide.

--- a/src/.styles/general.css
+++ b/src/.styles/general.css
@@ -1,3 +1,7 @@
+.hide-lang-alert #alerts #yt-lang-alert-container {
+  display: none !important;
+}
+
 .static-header #masthead-positioner {
   position: static !important;
 }
